style.css
@import url("https://fonts.googleapis.com/css2?family=Staatliches&display=swap");
:root {
  --primary-color: #c72727;
  --secondary-color: #f99500;
  --light-color: #f3f3f3;
  --dark-color: #333;
  --max-width: 1100px;
}
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body {
  font-family: "Lato", sans-serif;
  line-height: 1.5;
  background: var(--light-color);
}
a {
  color: #333;
  text-decoration: none;
}
ul {
  list-style: none;
}
img {
  width: 100%;
}
h1 {
  font-family: "Staatliches", cursive;
}
p {
  margin: 0.5rem 0;
}
.py-2 {
  padding: 40px 0px;
}
/* Utility */
.container {
  max-width: var(--max-width);
  margin: auto;
  padding: 0 2rem;
  overflow: hidden;
}
/* Navigation */
#main-nav {
  background-color: #fff;
  position: sticky;
  top: 0;
  z-index: 2;
}
#main-nav .container {
  display: grid;
  grid-template-columns: 1fr 1fr;
  padding: 1rem;
  align-items: center;
}
#main-nav .logo img {
  width: 80px;
  height: 70px;
}
#main-nav ul {
  display: flex;
  justify-content: end;
}
#main-nav ul li a {
  padding: 0.75rem;
  font-weight: bold;
}
#main-nav ul li a.current {
  background-color: var(--primary-color);
  color: #fff;
}
#main-nav ul li a:hover {
  background: var(--light-color);
  color: var(--dark-color);
}
/* Showcase */
#showcase {
  color: #fff;
  background: #333;
  padding: 2rem;
  position: relative;
}
#showcase::before {
  content: "";
  background: url("./images/showcase-1.jpg");
  background-repeat: no-repeat;
  background-position: bottom;
  background-size: cover;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0.3;
}
#showcase .showcase-container {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  justify-content: center;
  align-items: center;
  height: 50vh;
}
#showcase .showcase-content {
  z-index: 1;
}
#showcase .showcase-content p {
  margin-bottom: 1rem;
}
.category {
  display: inline-block;
  color: #fff;
  font-size: 0.55rem;
  text-transform: uppercase;
  padding: 0.4rem 0.6rem;
  border-radius: 15px;
  margin-bottom: 0.5rem;
  background: var(--secondary-color);
}
.btn {
  display: inline-block;
  border: none;
  background: var(--dark-color);
  color: #fff;
  padding: 0.5rem 1.5rem;
}
.btn-primary {
  background: var(--primary-color);
}
.btn-block {
  display: block;
  width: 100%;
  text-align: center;
}
.btn:hover {
  opacity: 0.9;
}
/* product-card */
#product-section .card {
  background: #fff;
  padding: 1rem;
}
#product-section .card h3 a {
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 2;
  overflow: hidden;
}
#product-section .card img {
  height: 250px;
}
#product-section .product-container {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 1rem;
}
/* Terms and conditions */
.terms-c {
  padding: 40px 0;
  /* margin: 40px 0; */
  margin-top: 100px;
  background-color: #f4f4f4;
}
.terms-c .secondary-heading {
  background-color: #838282;
  text-align: center;
  color: #fff;
}
.terms-c .sub-heading {
  padding: 20px 0 40px 0;
  text-decoration: underline;
}
.terms-c article {
  padding: 10px 0;
}
.terms-c article h3 {
  padding: 15px 0;
}
.terms-box {
  max-width: 100%;
  background-color: #636262;
  color: #fff;
  font-family: "Poppins", sans-serif;
  padding: 60px 30px;
}
.terms-text {
  padding: 0 20px;
  font-size: 14px;
  font-weight: 500;
  color: #f1f1f1;
}
.terms-text h2 {
  font-size: 24px;
  text-transform: uppercase;
}
.terms-text h3 {
  font-size: 24px;
}
.terms-text h4 {
  font-size: 13px;
  text-align: center;
  padding: 0 40px;
}

/* Footer */
#main-footer {
  background: var(--dark-color);
  color: #fff;
  padding: 1.5rem 0 0 0;
}
#main-footer img {
  width: 100px;
}
#main-footer a {
  color: #fff;
}
#main-footer .list li {
  padding: 0.5rem 0;
  border-bottom: #555 dotted;
  width: 90%;
}
#main-footer .list li a:hover {
  color: var(--primary-color);
}
#main-footer .footer-container {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-gap: 1.5rem;
}
#main-footer .footer-container > *:last-child {
  background-color: #444;
  grid-column: 1 / span 4;
  padding: 0.5rem;
  text-align: center;
  font-size: 0.75rem;
}
#main-footer .footer-container input[type="email"] {
  width: 90%;
  padding: 0.5rem;
  margin-bottom: 0.5rem;
}
#main-footer .footer-container input[type="submit"] {
  width: 90%;
}

/* Media Query */
@media (max-width: 768px) {
  #product-section .product-container {
    grid-template-columns: repeat(2, 1fr);
  }
}
@media (max-width: 600px) {
  #showcase .showcase-container,
  #product-section .product-container,
  #main-footer .footer-container {
    grid-template-columns: 1fr;
  }
  #main-footer .footer-container > *:last-child {
    grid-column: 1;
  }
  #main-footer .footer-container > *:first-child,
  #main-footer .footer-container > *:nth-child(2) {
    border-bottom: #444 dotted 1px;
    padding-bottom: 1rem;
  }
}

